tests/snapshots/snapshot_tests__snapshot_workspace_spec_passthrough.snap
---
source: tests/snapshot_tests.rs
expression: ws
---
{
  "root": ".",
  "mode": "pass_through",
  "include": [],
  "exclude": []
}
