tests/snapshots/snapshot_tests__snapshot_workspace_spec_staged.snap
---
source: tests/snapshot_tests.rs
expression: ws
---
{
  "root": "/projects/app",
  "mode": "staged",
  "include": [
    "src/**",
    "tests/**"
  ],
  "exclude": [
    "target/**"
  ]
}
